--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css","./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": ["src/app/parqueadero/funciones/funcion.js"]
           },
           "configurations": {
             "production": {
